syntax = "proto3";

option csharp_namespace = "HubSimulator.Domain.Protos";

import "Protos/minimal_message.proto";

enum HubEventType {
  HUB_EVENT_TYPE_NONE = 0;
  HUB_EVENT_TYPE_MERGE_MESSAGE = 1;
  HUB_EVENT_TYPE_PRUNE_MESSAGE = 2;
  HUB_EVENT_TYPE_REVOKE_MESSAGE = 3;
}

message MergeMessageBody {
  Message message = 1;
  repeated Message deleted_messages = 2;
}

message PruneMessageBody {
  Message message = 1;
}

message RevokeMessageBody {
  Message message = 1;
}

message HubEvent {
  HubEventType type = 1;
  uint64 id = 2;
  oneof body {
    MergeMessageBody merge_message_body = 3;
    PruneMessageBody prune_message_body = 4;
    RevokeMessageBody revoke_message_body = 5;
  };
} 